<resources>
    <string name="app_name">Gari</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="dark_mode">Switch to Dark Mode</string>
    <string name="light_mode">Switch to Light Mode</string>
    <string name="total_amount">Ksh. %1$s</string>
    <string name="username">, %1$s</string>
    <string name="full_name_">%1$s %2$s</string>
    <string name="features"><u>Features</u></string>
    <string name="book"><u>Book</u></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="History">History</string>
    <string name="Saved">Saved</string>
    <string name="model">Model:</string>
    <string name="drive">Drive:</string>
    <string name="transmission">Transmission:</string>
    <string name="price">Price per day:</string>
    <string name="status">Status:</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="name">Name:</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile:</string>
    <string name="county">County:</string>
    <string name="district">District:</string>
    <string name="estate">Estate:</string>
    <string name="landmark">Landmark:</string>
    <string name="upload_scanned_photo_of_drivers_license">+ Upload Scanned photo of Drivers License</string>
    <string name="upload_scanned_photo_of_identification_card_passport">+ Upload Scanned photo of Identification card/Passport</string>
    <string name="upload_a_clear_image_showing_your_face">+ Upload a clear image showing your face</string>
    <string name="enter_emergency_contacts">Enter Emergency Contacts</string>
    <string name="first_contact">First Contact</string>
    <string name="full_name">Full Name</string>
    <string name="relationship">Relationship</string>
    <string name="Mobile">Mobile</string>
    <string name="second_contact">Second Contact</string>
    <string name="submit">Submit</string>
    <string name="cc">CC:</string>
    <string name="color">Color:</string>
    <string name="registration">Registration:</string>
    <string name="passengers">Passengers:</string>
    <string name="doors">Doors:</string>
    <string name="company">Company:</string>
    <string name="per_day">per day</string>
    <string name="ksh">Ksh:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="total">Total:</string>
    <string name="days">days</string>
    <string name="destination">Destination</string>
    <string name="morning">Good Morning</string>
    <string name="afternoon">Good Afternoon</string>
    <string name="evening">Good Evening</string>
    <string name="night">Good Night</string>
    <string name="book_now">Book Now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mail">Email</string>
    <string name="mobil">Mobile</string>
    <string name="countie">County</string>
    <string name="distric">District</string>
    <string name="estat">Estate</string>
    <string name="landmak">Landmark</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="create_account"><u>Create Account?</u></string>
    <string name="email_address">Email Address</string>
    <string name="radio_selfDrive">Self Drive</string>
    <string name="radio_chauffeured">Chauffeured</string>
    <string name="driving_license_photo">Driving License photo</string>
    <string name="identification_card_photo">identification card photo</string>
    <string name="user_photo">user photo</string>
    <string name="companylogo">companyLogo</string>
    <string name="login_using_fingerprint">Login using Fingerprint</string>
    <string name="fingerprint">fingerprint</string>
    <string name="login">Login</string>
    <string name="login2"><u>Login</u></string>
    <string name="remember_me">Remember me</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="updatebutton">updateButton</string>
    <string name="_0_0_1">0.0.1</string>
    <string name="version">Version:</string>
    <string name="about_gari">About Gari</string>
    <string name="save_button">save button</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="_4">4.</string>
    <string name="_5">5.</string>
    <string name="_0">0</string>
    <string name="visibility_toggle">visibility toggle</string>
    <string name="upload">Upload</string>
    <string name="header1">Hire a car in very easy steps</string>
    <string name="header2">Hire any car at very affordable rates</string>
    <string name="header3">Choose the car you like from a variety</string>
    <string name="subHeader1">Very easy steps to the car hire process</string>
    <string name="subHeader2">Affordable rates for everyone</string>
    <string name="subHeader3">We have variety of cars for you to choose from.</string>
    <string name="skip">Skip</string>
    <string name="login_here">Login here</string>
    <string name="create_your_account_here">Create your account here</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="logout">Logout</string>
    <string name="faq">FAQ</string>
    <string name="need_assistance">Need Assistance?</string>
    <string name="total_days">Total Days:</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="phone_number">Phone number</string>
    <string name="failed_to_register_user">Failed to register user!</string>
    <string name="kindly_contact_admin">Kindly contact admin for assistance!</string>
    <string name="enter_first_name">Kindly enter first name</string>
    <string name="enter_last_name">Kindly enter last name</string>
    <string name="enter_email">Kindly enter email</string>
    <string name="enter_a_valid_email">Kindly enter a valid email!</string>
    <string name="enter_mobile_number">Kindly enter mobile number</string>
    <string name="enter_a_valid_phone_no">Kindly enter a valid phone no.</string>
    <string name="enter_password">Kindly enter password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="creating_account">Creating account…</string>
    <string name="failed_to_login">Failed to login!</string>
    <string name="logging_in">Logging in…</string>
    <string name="ksh_price">Ksh. %1$s</string>
    <string name="dates">Dates</string>
    <string name="fuel">Fuel</string>
    <string name="specifications">Specifications</string>
</resources>