<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home1"
        android:title="@string/home" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/user1"
        android:title="@string/profile" />
    <item
        android:id="@+id/myVehicles"
        android:icon="@drawable/truck1"
        android:title="@string/my_vehicles" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout1"
        android:title="@string/logout" />

    <item android:title="@string/faq">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/info1"
                android:title="@string/about_gari" />
            <item
                android:id="@+id/help"
                android:icon="@drawable/helpcircle1"
                android:title="@string/need_assistance" />
        </menu>
    </item>
</menu>