<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="199dp"
        android:layout_height="120dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:layout_marginStart="50dp"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_below="@id/tvFirstName"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:layout_marginStart="100dp"
        android:layout_toEndOf="@+id/tvFirstName"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_below="@id/tvLastName"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/etFirstName"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFirstName"
        android:layout_marginStart="50dp"
        android:text="@string/mail"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:layout_below="@+id/tvEmail"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmailAddress"
        android:layout_marginStart="50dp"
        android:text="@string/mobil"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:layout_below="@+id/tvMobile"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="phone"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvCounty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobile"
        android:layout_marginStart="50dp"
        android:text="@string/countie"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCounty"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_below="@+id/tvCounty"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvDistrict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobile"
        android:layout_marginStart="129dp"
        android:layout_toEndOf="@+id/tvFirstName"
        android:text="@string/distric"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etDistrict"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_below="@+id/tvDistrict"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@+id/etCounty"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvEstate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCounty"
        android:layout_marginStart="50dp"
        android:text="@string/estat"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEstate"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_below="@+id/tvEstate"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvLandMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDistrict"
        android:layout_marginStart="157dp"
        android:layout_toEndOf="@+id/tvEstate"
        android:text="@string/landmak"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etLandMark"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_below="@+id/tvLandMark"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@+id/etEstate"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEstate"
        android:layout_marginStart="50dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:layout_below="@+id/tvPassword"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <ImageButton
        android:id="@+id/ibShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassword"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/etPassword"
        android:background="@color/white"
        app:srcCompat="@drawable/outline_visibility_black_24dp" />

    <TextView
        android:id="@+id/tvcPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginStart="50dp"
        android:text="@string/confirm_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />android:inputType="textPassword"

    <EditText
        android:id="@+id/etcPassword"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:layout_below="@+id/tvcPassword"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etcPassword"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="2dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/tvNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btRegister"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/already_have_an_account_login"
        android:textSize="16sp" />


</RelativeLayout>