<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/tvImage"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <TextView
            android:id="@+id/titleCarName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/tvImage"
            android:text="@string/model"
            android:textColor="@color/black"
            android:textSize="16.5sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCarName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/titleCarName"
            android:text="Toyota Premio"
            android:textColor="@color/black"
            android:textSize="16.5sp" />

        <TextView
            android:id="@+id/titleDriveOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleCarName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/tvImage"
            android:text="@string/drive"
            android:textColor="@color/black"
            android:textSize="16.5sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDriveOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCarName"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/titleDriveOption"
            android:text="Self Drive/Chauffered"
            android:textColor="@color/black"
            android:textSize="16.5sp" />

        <TextView
            android:id="@+id/titleTransmission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleDriveOption"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/tvImage"
            android:text="@string/transmission"
            android:textColor="@color/black"
            android:textSize="16.5sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTransmission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDriveOption"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/titleTransmission"
            android:text="Automatic"
            android:textColor="@color/black"
            android:textSize="16.5sp"
             />

        <TextView
            android:id="@+id/titlePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTransmission"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/tvImage"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="16.5sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTransmission"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/titlePrice"
            android:text="3500"
            android:textColor="@color/black"
            android:textSize="16.5sp"/>

        <TextView
            android:id="@+id/titleRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTransmission"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/tvPrice"
            android:text="@string/per_day"
            android:textColor="@color/black"
            android:textSize="16.5sp"/>

        <TextView
            android:id="@+id/titleStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlePrice"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/tvImage"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="16.5sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPrice"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/titleStatus"
            android:text="Available"
            android:textColor="@color/green"
            android:textSize="16.5sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>





